@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux", "Kenneth Kalmer"]
-  s.date = %q{2009-12-24}
+  s.date = %q{2009-12-25}
   s.description = %q{
     Json Internet Get.
 
@@ -34,7 +34,6 @@ Gem::Specification.new do |s|
      "lib/rufus/jig.rb",
      "lib/rufus/jig/couch.rb",
      "lib/rufus/jig/http.rb",
-     "lib/rufus/jig/json.rb",
      "lib/rufus/jig/path.rb",
      "lib/rufus/jig/version.rb",
      "rufus-jig.gemspec",
@@ -67,11 +66,17 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
+      s.add_runtime_dependency(%q<rufus-lru>, [">= 0"])
+      s.add_runtime_dependency(%q<rufus-json>, [">= 0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
     else
+      s.add_dependency(%q<rufus-lru>, [">= 0"])
+      s.add_dependency(%q<rufus-json>, [">= 0"])
       s.add_dependency(%q<yard>, [">= 0"])
     end
   else
+    s.add_dependency(%q<rufus-lru>, [">= 0"])
+    s.add_dependency(%q<rufus-json>, [">= 0"])
     s.add_dependency(%q<yard>, [">= 0"])
   end
 end
