@@ -2,8 +2,9 @@
 = rufus-jig CHANGELOG.txt
 
 
-== rufus-jig - 0.1.7    not yet released
+== rufus-jig - 0.1.7    released 2009/12/25
 
+- using rufus-json
 - implemented :force_json => true for services returning JSON in plain/text
 - :accept => :json as a shorcut for :accept -> 'application/json'
 
